# eac-repo

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: gh_pages.yml
docs/: conf.py  index.rst  src_trace.toml  ubproject.toml
docs/_static/mermaid/: mermaid.min.js
src/: README.md
